--- a/Roteiro Tensorflow com GPU.ipynb
+++ b/Roteiro Tensorflow com GPU.ipynb
@@ -72,6 +72,108 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "No Jupyter Notebook, execute os commandos abaixo para verificar se a GPU foi reconhecida:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/usr/bin/sh: 1: nvidia-smi: not found\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!nvidia-smi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[name: \"/device:CPU:0\"\n",
+      "device_type: \"CPU\"\n",
+      "memory_limit: 268435456\n",
+      "locality {\n",
+      "}\n",
+      "incarnation: 11960095862998161740\n",
+      ", name: \"/device:XLA_CPU:0\"\n",
+      "device_type: \"XLA_CPU\"\n",
+      "memory_limit: 17179869184\n",
+      "locality {\n",
+      "}\n",
+      "incarnation: 274458183357016397\n",
+      "physical_device_desc: \"device: XLA_CPU device\"\n",
+      "]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Lista todos os dispositivos disponiveis\n",
+    "from tensorflow.python.client import device_lib\n",
+    "print(device_lib.list_local_devices())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Número Disponível de GPUs:  0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import tensorflow as tf\n",
+    "print(\"Número Disponível de GPUs: \", len(tf.config.experimental.list_physical_devices('GPU')))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Lista o código de cada GPU\n",
+    "tf.config.list_physical_devices('GPU')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Se reconheceu a GPU, os detalhes serão mostrados. E então é só executar seu código normalmente que o TF faz o restante do trabalho."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -95,7 +197,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
